add xml bind